legacy/apps/n8n/app.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-depl-c8f2cd03
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: n8n-depl-c8fb3fe6
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: n8n-depl-c8fb3fe6
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: N8N_PORT
              value: "5678"
            - name: N8N_USER_MANAGEMENT_ENABLED
              value: "false"
            - name: GENERIC_TIMEZONE
              value: America/Los_Angeles
            - name: TZ
              value: America/Los_Angeles
          image: n8nio/n8n:2.20.6
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 5678
              scheme: HTTP
          name: n8n
          ports:
            - containerPort: 5678
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 5678
              scheme: HTTP
          resources:
            limits:
              cpu: 2000m
              ephemeral-storage: 10Gi
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: pvc-n8n-depl-vol-appdata-pvc-c86b6999
        - env:
            - name: LUNCHMONEY_TOKEN
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: n8n-depl-lm-token-c86ce486
            - name: KUBERA_API_KEY
              valueFrom:
                secretKeyRef:
                  key: key
                  name: n8n-depl-kb-token-c87948cc
            - name: KUBERA_API_SECRET
              valueFrom:
                secretKeyRef:
                  key: secret
                  name: n8n-depl-kb-token-c87948cc
            - name: KUBERA_PORTFOLIO_ID
              valueFrom:
                secretKeyRef:
                  key: portfolioId
                  name: n8n-depl-kb-token-c87948cc
          image: ghcr.io/wyvernzora/personal-finance-mcp:edge
          imagePullPolicy: Always
          name: personal-finance-mcp
          ports:
            - containerPort: 3000
              name: mcp
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        runAsNonRoot: true
        runAsUser: 1000
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-n8n-depl-vol-appdata-pvc-c86b6999
          persistentVolumeClaim:
            claimName: n8n-depl-vol-appdata-pvc-c86b6999
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 5678
  selector:
    cdk8s.io/metadata.addr: n8n-depl-c8fb3fe6
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: auth-authelia@kubernetescrd
  name: n8n-ingress-c8d604fd
spec:
  rules:
    - host: n8n.wyvernzora.io
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 80
            path: /
            pathType: Prefix
